
Package org.springframework.osgi.config
* fixed collection parsing bug that ignored inlined comparators during detection of ordered types

Package org.springframework.osgi.service
* fixed conversion of ServiceReferences in ServiceReferenceEditor
* improved error reporting for importer and exporter listeners configured with non-existing or incorrect custom methods


Changes in version 1.2.0 RC1 (2009-03-09)
-----------------------------------------

General
* various documentation improvements and fixes
* upgraded to Felix 1.4.1
* upgraded to Knopflerfish 2.2.0

Package org.springframework.osgi.compendium
* fixed OSGi service unregistration of <managed-service/> listeners
* fixed property injection to occur before the initializing method is invoked for <managed-service-factory/> beans
* renamed <managed-service/> to <managed-properties/> to better reflect the intent

Package org.springframework.osgi.context
* improved proxying of classes that are boot delegated outside the OSGi environment
* error handling is delegated to the multicaster unless debug is on
* improved type filtering for tracked services 
* improved AbstractOsgiBundleApplicationContext to republish the context OSGi service during #refresh calls

Package org.springframework.osgi.extender
* changed namespace handlers lifecycle to depend on bundle events STARTED/STOPPED instead of RESOLVED/UNRESOLVED
* removed type compatibility check for custom namespace handlers as it caused false warnings in some cases
* added extender configuration setting for controlling the default bundle service dependency wait time
* added configurable event logger for the managed bundles

Package org.springframework.osgi.io
* improved OsgiBundleResource#getFile() file detection method
* eliminated existance check on resolved files for OsgiBundleResource#getFile()

Package org.springframework.osgi.mock
* added option to set the MockBundle internal class loader
* changed (slightly) the MockBundleContext default properties
